<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CALCULATOR</string>
    <string name="calc_te" ></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="CLR">CLR</string>
    <string name="zero">0</string>
    <string name="EQUAL">=</string>
    <string name="devide">/</string>
    <string name="dot">.</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
</resources>